[package]
name = "renovate-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the latest tag is v1.0.107, thus this should be updated by the renovate bot
serde_json = "1.0.105"
# serde_json = { git = "https://github.com/serde-rs/json", tag = 'v1.0.105' }
